objects/EUR_CRM_Model_Stock_Level__c.object
<CustomObject>
    <description>Calculates the optimal stock level of a product</description>
    <fields>
        <fullName>EUR_CRM_Account_EU__c</fullName>
        <label>Account (EU)</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipName>Model_Stock_Levels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality-Size (EU)</label>
        <referenceTo>EUR_CRM_Size__c</referenceTo>
        <relationshipName>Model_Stock_Levels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Model_Stock_Level_Btl__c</fullName>
        <label>Model Stock Level (Btl)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Model Stock Level (EU)</label>
    <nameField>
        <displayFormat>MSL-{0000000000}</displayFormat>
        <label>Model Stock Level Entry No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Model Stock Levels (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_CRM_ZA_Model_Stock_Layout</fullName>
        <active>true</active>
        <label>EUR ZA Model Stock Layout</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>